--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.30.0
-pypdf2==3.0.1
-langchain==0.1.16
-faiss-cpu>=1.8,<2.0
-
-
+streamlit>=1.30.0
+PyPDF2>=3.0.0
+langchain>=0.1.0
+langchain-embeddings-openai>=0.0.7
+langchain-community>=0.0.18
